log task performance information translations, new tasks